CHANGELOG
=========
+-----------------------+
| VERSION: 0.5.6        |
+-----------------------+
BUGFIXES
IMPROVEMENTS

+-----------------------+
| VERSION: 0.5.5        |
+-----------------------+
BUGFIXES
23-01-06    Fixed small bug where registry of PEAR modules listed in installer
            was referring to the system instead of local PEAR install
20-01-06    Problems with adding subscribers fixed in NewsletterMgr
            (AJ Tarachanowicz)
20-01-06    Problems with ContentTypeMgr fixed (AJ Tarachanowicz)
17-01-06    Fixed problems with naming conventions in module generator
30-12-05    Fixed bug where contact us template could not be found (Andrey Podshivalov)
21-12-05    Ancestors correctly highlighted in navigation trees (Gerald Fishcer)
20-12-05    Added missing path vars in config template (Tomasz Osmialowski)
20-12-05    Fixed corruption of german language file in default module
19-12-05    Fixed incorrect constant which prevented instant messages from working
            correctly
16-12-05    Changed erroneous ECT tz to CET (Sylvain PAPET)

IMPROVEMENTS
23-01-06    Implemented web-based PEAR package and channel management.  Basic ideas
            used from PEAR webinstaller and extended.
23-01-06    Seagull is now PHP 5.1.x compliant
23-01-06    Added new conf key: [RegisterMgr][enabled] set to true by default
23-01-06    Added auto-correct frontScriptName for CGI users in SGL_Task_CreateConfig()
18-01-06    Test runner now uses pearified SimpleTest and notices are suppressed
            for now, see http://trac.seagullproject.org/wiki/Standards/UnitTesting
17-01-06    Integrated Serendipity blog, see
            http://trac.seagullproject.org/wiki/Integration/Serendipity
17-01-06    Added new 'getAllModules' xml-rpc service
16-01-06    Instantiating a cache object has changed from
            $cache = & SGL::cacheSingleton(); to $cache = & SGL_Cache::singleton();
            Likewise, SGL::clearCache() has changed to SGL_Cache::clear()