@@ -4,7 +4,9 @@ CHANGELOG
 | VERSION: 0.5.6        |
 +-----------------------+
 BUGFIXES
+
 IMPROVEMENTS
+26-01-06    Path to seagull/var explicitly named when not writable in installer
 
 +-----------------------+
 | VERSION: 0.5.5        |
